simple sdk and bot's template.